tests/ui/transmute-src-not-intobytes.nightly.stderr
error[E0277]: the trait bound `NotZerocopy<AU16>: IntoBytes` is not satisfied
  --> /usr/local/google/home/joshlf/workspace/zerocopy/ui-test/tests/ui/transmute-src-not-intobytes.rs:17:32
   |
17 | ...: AU16 = transmute!(NotZerocopy(AU16(0)));
   |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |             |
   |             unsatisfied trait bound
   |             required by a bound introduced by this call
   |
help: the trait `IntoBytes` is not implemented for `NotZerocopy<AU16>`
  --> /usr/local/google/home/joshlf/workspace/zerocopy/ui-test/tests/ui/../include.rs:15:5
   |
15 |     pub struct NotZerocopy<T = ()>(pub T);
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   = note: Consider adding `#[derive(IntoBytes)]` to `NotZerocopy<AU16>`
   = help: the following other types implement trait `IntoBytes`:
             ()
             AU16
             AtomicBool
             AtomicI16
             AtomicI32
             AtomicI64
             AtomicI8
             AtomicIsize
           and 68 others
note: required by a bound in `SRC_NOT_AS_BYTES::transmute`
  --> /usr/local/google/home/joshlf/workspace/zerocopy/ui-test/tests/ui/transmute-src-not-intobytes.rs:17:32
   |
17 | ...TES: AU16 = transmute!(NotZerocopy(AU16(0)));
   |                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   = note: this error originates in the macro `transmute` (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
